Tweak bracket matching and update changelog

--- a/styles/base.less
+++ b/styles/base.less
@@ -43,7 +43,7 @@ atom-text-editor, :host {
 // cannot style the bracket itself
 // see: https://github.com/atom/bracket-matcher/issues/46
 .bracket-matcher {
-  background-color: fadeout(@base01, 20%);
+  background-color: fadeout(@syntax-comment-color, 20%);
   opacity: 0.5;
 }
 
